--- a/style.css
+++ b/style.css
@@ -153,6 +153,9 @@ img {
     background-color: var(--second-color);
     transition: 0.5s;
   }
+  .myimage {
+    display: inline;
+  }
   .bd-grid {
     margin-top: -40px;
   }
@@ -411,6 +414,9 @@ img {
 @media screen and (min-width: 768px) {
   body {
     margin: 0;
+  }
+  .myimage {
+    display: inline;
   }
   .section {
     padding-top: 4rem;
